# lumora

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  requirements.txt  seed_demo.py
backend/alembic/: README  env.py
backend/alembic/versions/: 3d7e6a2f1b88_add_site_settings.py  51801cd4dc45_initial_schema.py  8f2a1c4b9d30_add_n_runs_cron_run_index.py
backend/app/: __init__.py  aggregate.py  auth.py  budget.py  cli.py  config.py  db.py  exporter.py  main.py  web.py
backend/app/alerting/: __init__.py  checker.py  dispatcher.py  email.py  slack.py  telegram.py
backend/app/api/: __init__.py  dashboard.py  export.py  projects.py  prompts.py  snapshots.py
backend/app/judge/: __init__.py  rubric.py  scorer.py
backend/app/models/: __init__.py  answer.py  project.py  prompt.py  score.py  site_setting.py  snapshot.py
backend/app/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
backend/app/scheduler/: __init__.py  runner.py
backend/app/static/css/: app.css
backend/app/static/js/: app.js
backend/app/templates/: _prompts.html  _snapshots.html  base.html  home.html  login.html  new_project.html  project_detail.html  settings.html
backend/scripts/: smoke_providers.py
backend/tests/: conftest.py  test_aggregate.py  test_alerting.py  test_config.py  test_dashboard_api.py  test_exporter.py  test_runner.py  test_site_protection.py  test_web_ui.py
deploy/: install.sh  lumora.service
frontend/: README.md
