[project]
name = "lumora"
version = "0.1.0"
description = "Open-source, self-hosted tracker for how a brand appears in AI assistant answers over time."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Arcwel" }]
keywords = ["geo", "aeo", "ai-visibility", "llm", "brand-monitoring", "seo"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "gunicorn>=21.2,<24.0",
    "SQLAlchemy>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "APScheduler>=3.10,<4.0",
    "click>=8.1,<9.0",
    "openai>=1.40",
    "anthropic>=0.34",
    "google-genai>=0.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
lumora = "app.cli:main"

[project.urls]
Homepage = "https://github.com/arcwel/lumora"
Repository = "https://github.com/arcwel/lumora"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
package-dir = { "" = "backend" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
